name:                ashutoshr
version:             0.1.0.0
synopsis:            Personal Blog 
-- description:         
homepage:            https://github.com/ashutoshrishi/ashutoshrishi.github.io
license:             BSD3
license-file:        LICENSE
author:              rishi
maintainer:          ashutoshrishi92@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable server
  main-is:             Main.hs
  hs-source-dirs:      src/backend
  default-language:    Haskell2010
  build-depends: base >=4.9 && <5
               , scotty >= 0.11.0
                       
